# shadow-peft

./: LICENSE  README.md  pyproject.toml  pytest.ini  task_prompt.txt
.github/workflows/: lint.yaml  pytest.yaml
examples/: classification_playground.ipynb  different_llm_backbones_playground.ipynb  explicit_shadow_playground.ipynb  gsm8k_dora_playground.ipynb  gsm8k_lora_playground.ipynb  gsm8k_shadow_playground.ipynb  llm_playground.ipynb  mmlu_dora_playground.ipynb  mmlu_lora_playground.ipynb  mmlu_shadow_playground.ipynb  pretraining_shadow_via_pseudo_inverse.ipynb  robot_intent_playground.ipynb  squadv2_dora_playground.ipynb  squadv2_lora_playground.ipynb  squadv2_shadow_playground.ipynb
experiment/: README_scaling.md  best_script.md  centralized_shadow_pretraining.ipynb  data_utils.py  example_ood_eval.sh  example_shadow_peft_eval.sh  latency_perf.py  print_mmlu_results.py  run_base_eval.sh  run_eval.py  run_experiments.py  run_lm_head_alignment.py  run_ood_eval_4B.sh  run_shadow_peft.py  run_shadow_peft_eval.py  run_shadow_peft_ood_eval.py  run_shadow_pretraining.py  shadow_model.py  test_mmlu.py
src/shadow_peft/: __init__.py  config.py  model_utils.py  modules.py  peft_model.py  projected_causal_lm.py  task_models.py
tests/: conftest.py  test_shadow_peft.py
