[project]
name = "shadow-peft"
version = "0.0.1"
description = "ShadowPEFT: Parameter-Efficient Finetuning with Centralized and Pretrainable Shadow Network"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "ShadowLLM" }]
dependencies = [
  "torch>=2.1",
  "transformers>5.0",
  "safetensors>=0.4.3",
]

[project.urls]
Repository = "https://github.com/ShadowLLM/ShadowPEFT"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shadow_peft"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["experiment"]
lint.select = ["E", "F", "I", "UP", "B", "SIM"]
lint.ignore = ["E501","B028"]

[tool.ruff.lint.isort]
known-first-party = ["shadow_peft"]
